--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-time = { version = "0.3.7", features = [ "local-offset" ] }
+time = { version = "0.3.9", features = [ "local-offset", "parsing" ] }
 sqlite = "0.26.0"
 getopts = "0.2"
 csv = "1.1"
